--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,27 +27,28 @@ android {
 dependencies {
   compile fileTree(include: ['*.jar'], dir: 'libs')
   testCompile 'junit:junit:4.12'
+  //
   compile "com.android.support:appcompat-v7:${APPCOMPAT_V7_VERSION}"
   compile "com.android.support:design:${DESIGN_VERSION}"
   compile "com.android.support:cardview-v7:${CARDVIEW_VERSION}"
-
+  compile project(':BaseRecyclerViewAdapter')
+  // rxJava系列
   compile "io.reactivex:rxandroid:${RXANDROID_VERSION}"
   compile "io.reactivex:rxjava:${RXJAVA_VERSION}"
   compile "com.jakewharton.rxbinding:rxbinding:${RXBINDING_VERSION}"
   compile "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:${RXBINDING_SUPPORT_VERSION}"
   compile "com.jakewharton.rxbinding:rxbinding-support-v4:${RXBINDING_SUPPORT_VERSION}"
-
+  // retrofit系列
   compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
   compile "com.squareup.retrofit2:converter-gson:${CONVERTER_GSON_VERSION}"
   compile "com.squareup.retrofit2:adapter-rxjava:${ADAPTER_RXJAVA_VERSION}"
-
+  // okhttp系列
   compile "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
   compile "com.squareup.okhttp3:logging-interceptor:${LOGGING_INTERCEPTOR_VERSION}"
-
+  // glide系列
   compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
   compile "jp.wasabeef:glide-transformations:${GLIDE_TRANSFORMATIONS_VERSION}"
-
+  // butterknife系列
   compile "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
   apt "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_COMPILER_VERSION}"
-
 }
