--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
   compile "com.squareup.retrofit2:adapter-rxjava:${ADAPTER_RXJAVA_VERSION}"
   // okhttp系列
   compile "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
-  compile "com.squareup.okhttp3:logging-interceptor:${LOGGING_INTERCEPTOR_VERSION}"
+  compile "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
   // glide系列
   compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
   compile "jp.wasabeef:glide-transformations:${GLIDE_TRANSFORMATIONS_VERSION}"
