--- a/gradle.properties
+++ b/gradle.properties
@@ -21,20 +21,30 @@ APPCOMPAT_V7_VERSION = 24.2.0
 DESIGN_VERSION = 24.2.0
 CARDVIEW_VERSION = 24.2.0
 
+BASE_RECYCLER_ADAPTER_VERSION = 1.0.0
+
+# rxJava系列
 RXANDROID_VERSION = 1.1.0
 RXJAVA_VERSION = 1.1.3
 RXBINDING_VERSION = 0.4.0
 RXBINDING_SUPPORT_VERSION = 0.4.0
 RXBINDING_RECYCLERVIEW_VERSION = 0.4.0
 
-RETROFIT_VERSION = 2.0.2
-CONVERTER_GSON_VERSION = 2.0.2
-ADAPTER_RXJAVA_VERSION = 2.0.2
+# retrofit系列
+RETROFIT_VERSION = 2.1.0
+CONVERTER_GSON_VERSION = 2.1.0
+ADAPTER_RXJAVA_VERSION = 2.1.0
 
-OKHTTP_VERSION = 3.2.0
+# okhttp系列
+OKHTTP_VERSION = 3.4.1
 
+# glide系列
 GLIDE_VERSION = 3.7.0
 GLIDE_TRANSFORMATIONS_VERSION = 2.0.0
 
+# butterknife系列
 BUTTERKNIFE_VERSION = 8.4.0
 BUTTERKNIFE_COMPILER_VERSION = 8.4.0
+
+# 日期选择
+ANDROID_TIMES_SQUARE_VERSION = 1.6.5
