--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,17 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# ------gradle≈‰÷√------
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
 
 APPCOMPAT_V7_VERSION = 24.2.0
 DESIGN_VERSION = 24.2.0
 CARDVIEW_VERSION = 24.2.0
 
-BASE_RECYCLER_ADAPTER_VERSION = 1.0.0
+# RecyclerViewAdapter
+BASE_RECYCLER_ADAPTER_VERSION = 1.0.1
 
 # rxJavaœµ¡–
 RXANDROID_VERSION = 1.1.0
