--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
   buildToolsVersion "24.0.1"
 
   defaultConfig {
-    applicationId "com.ouyangzn.topgithub"
+    applicationId "com.ouyangzn.github"
     minSdkVersion 14
     targetSdkVersion 24
     versionCode 1
