--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.ouyangzn.topgithub">
+    package="com.ouyangzn.github">
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -9,7 +9,7 @@
   <application
       android:name=".App"
       android:allowBackup="false"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/ic_logo"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
