--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'realm-android'
 
 android {
   compileSdkVersion 24
@@ -33,6 +34,8 @@ dependencies {
   compile "com.android.support:cardview-v7:${CARDVIEW_VERSION}"
   // RecyclerViewAdapter
   compile "com.ouyangzn.lib:BaseRecyclerViewAdapter:${BASE_RECYCLER_ADAPTER_VERSION}"
+  // 日期选择
+  compile "com.ouyangzn.lib:PickView:${PICK_VIEW_VERSION}"
 
   // rxJava系列
   compile "io.reactivex:rxandroid:${RXANDROID_VERSION}"
@@ -53,6 +56,4 @@ dependencies {
   // butterknife系列
   compile "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
   apt "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_COMPILER_VERSION}"
-  // 日期选择
-  compile project(':PickViewLibrary')
 }
