--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,8 @@ CARDVIEW_VERSION = 24.2.0
 
 # RecyclerViewAdapter
 BASE_RECYCLER_ADAPTER_VERSION = 1.0.1
+# PickView
+PICK_VIEW_VERSION=1.0.1
 
 # rxJava系列
 RXANDROID_VERSION = 1.1.0
@@ -51,6 +53,5 @@ GLIDE_TRANSFORMATIONS_VERSION = 2.0.0
 # butterknife系列
 BUTTERKNIFE_VERSION = 8.4.0
 BUTTERKNIFE_COMPILER_VERSION = 8.4.0
-
-# 日期选择
-ANDROID_TIMES_SQUARE_VERSION = 1.6.5
+#realm
+REALM_VERSION=1.2.0
