1、根据github官方要求删除与github有关的名称、图片等； 2、实现收藏、取消收藏功能（界面暂时没做）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,7 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name=".module.collect.CollectActivity">
+    </activity>
   </application>
 </manifest>
