--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ allprojects {
   repositories {
     jcenter()
     maven { url "https://jitpack.io" }
+    maven {
+      url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
   }
 }
 
