--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# ------gradle配置------
+# ------gradle\u7CFB\u5217------
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
@@ -30,28 +30,27 @@ CARDVIEW_VERSION = 24.2.0
 BASE_RECYCLER_ADAPTER_VERSION = 1.0.1
 # PickView
 PICK_VIEW_VERSION=1.0.1
-
-# rxJava系列
+# rxJava\u7CFB\u5217
 RXANDROID_VERSION = 1.1.0
 RXJAVA_VERSION = 1.1.3
 RXBINDING_VERSION = 0.4.0
 RXBINDING_SUPPORT_VERSION = 0.4.0
 RXBINDING_RECYCLERVIEW_VERSION = 0.4.0
-
-# retrofit系列
+# retrofit\u7CFB\u5217
 RETROFIT_VERSION = 2.1.0
 CONVERTER_GSON_VERSION = 2.1.0
 ADAPTER_RXJAVA_VERSION = 2.1.0
-
-# okhttp系列
+# okhttp\u7CFB\u5217
 OKHTTP_VERSION = 3.4.1
-
-# glide系列
+# glide\u7CFB\u5217
 GLIDE_VERSION = 3.7.0
 GLIDE_TRANSFORMATIONS_VERSION = 2.0.0
-
-# butterknife系列
+# butterknife\u7CFB\u5217
 BUTTERKNIFE_VERSION = 8.4.0
 BUTTERKNIFE_COMPILER_VERSION = 8.4.0
-#realm
+# realm
 REALM_VERSION=1.2.0
+# stetho   chrome\u8F93\u5165chrome://inspect
+STETHO_VERSION=1.4.1
+STETHO_OKHTTP_VERSION=1.4.1
+STETHO_REALM_VERSION=0.9.0
