--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
     // realm
     classpath "io.realm:realm-gradle-plugin:${REALM_VERSION}"
     // retrolambda (https://github.com/evant/gradle-retrolambda)
-    classpath 'me.tatarka:gradle-retrolambda:+' //3.2.4
+    classpath "me.tatarka:gradle-retrolambda:${GRADLE_RETROLAMBDA_VERSION}"
   }
 }
 
