--- a/gradle.properties
+++ b/gradle.properties
@@ -36,10 +36,9 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError -Xmx2048m
-
-APPCOMPAT_V7_VERSION = 24.2.0
-DESIGN_VERSION = 24.2.0
-CARDVIEW_VERSION = 24.2.0
+APPCOMPAT_V7_VERSION=25.0.0
+DESIGN_VERSION=25.0.0
+CARDVIEW_VERSION=25.0.0
 
 # RecyclerViewAdapter
 BASE_RECYCLER_ADAPTER_VERSION = 1.0.1
@@ -53,6 +52,7 @@ RXJAVA_VERSION = 1.1.3
 RXBINDING_VERSION = 0.4.0
 RXBINDING_SUPPORT_VERSION = 0.4.0
 RXBINDING_RECYCLERVIEW_VERSION = 0.4.0
+RXLIFECYCLE_VERSION=1.0
 
 # retrofit\u7CFB\u5217
 RETROFIT_VERSION = 2.1.0
