--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,12 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError -Xmx2048m
+# \u7F16\u8BD1\u3001\u6784\u5EFA\u7B49\u7248\u672C
+MIN_SDK_VERSION=14
+TARGET_SDK_VERSION=23
+BUILD_TOOLS_VERSION=25.0.0
+COMPILE_SDK_VERSION=24
+# \u7CFB\u7EDF\u5E93
 APPCOMPAT_V7_VERSION=25.0.0
 DESIGN_VERSION=25.0.0
 CARDVIEW_VERSION=25.0.0
