--- a/gradle.properties
+++ b/gradle.properties
@@ -42,12 +42,12 @@ TARGET_SDK_VERSION=23
 BUILD_TOOLS_VERSION=25.0.0
 COMPILE_SDK_VERSION=24
 # \u7CFB\u7EDF\u5E93
-APPCOMPAT_V7_VERSION=25.0.0
-DESIGN_VERSION=25.0.0
-CARDVIEW_VERSION=25.0.0
+APPCOMPAT_V7_VERSION=25.0.1
+DESIGN_VERSION=25.0.1
+CARDVIEW_VERSION=25.0.1
 
 # RecyclerViewAdapter
-BASE_RECYCLER_ADAPTER_VERSION = 1.0.1
+BASE_RECYCLER_ADAPTER_VERSION=1.0.2
 # PickView
 PICK_VIEW_VERSION=1.0.1
 GRADLE_RETROLAMBDA_VERSION=3.3.0
