1、缩减安装包体积

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,13 +42,19 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
       buildConfigField "boolean", "LOG_DEBUG", "false"
+      ndk {
+        abiFilters "armeabi-v7a"
+      }
     }
     debug {
-      minifyEnabled true
-      shrinkResources true
+      minifyEnabled false
+      shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
       buildConfigField "boolean", "LOG_DEBUG", "true"
+      ndk {
+        abiFilters "armeabi-v7a"
+      }
     }
   }
   compileOptions {
