--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ buildscript {
     // butterknife
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     // realm
-    classpath "io.realm:realm-gradle-plugin:${REALM_VERSION}"
+    //    classpath "io.realm:realm-gradle-plugin:${REALM_VERSION}"
     // retrolambda (https://github.com/evant/gradle-retrolambda)
     classpath "me.tatarka:gradle-retrolambda:${GRADLE_RETROLAMBDA_VERSION}"
+    classpath "org.greenrobot:greendao-gradle-plugin:${GREENDAO_VERSION}" // add plugin
   }
 }
 
