--- a/gradle.properties
+++ b/gradle.properties
@@ -76,6 +76,8 @@ BUTTERKNIFE_VERSION = 8.4.0
 BUTTERKNIFE_COMPILER_VERSION = 8.4.0
 # realm
 REALM_VERSION=2.0.2
+# greendao
+GREENDAO_VERSION=3.2.2
 
 # stetho   chrome\u8F93\u5165chrome://inspect
 STETHO_VERSION=1.4.1
