--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".module.collect.CollectActivity">
-    </activity>
+    <activity android:name=".module.collect.CollectActivity"/>
+    <activity android:name=".base.BaseFragmentActivity"/>
   </application>
 </manifest>
