--- a/gradle.properties
+++ b/gradle.properties
@@ -44,9 +44,9 @@ BUILD_TOOLS_VERSION=25.0.0
 COMPILE_SDK_VERSION=24
 
 # \u7CFB\u7EDF\u5E93
-APPCOMPAT_V7_VERSION=25.0.1
-DESIGN_VERSION=25.0.1
-CARDVIEW_VERSION=25.0.1
+APPCOMPAT_V7_VERSION=25.3.1
+DESIGN_VERSION=25.3.1
+CARDVIEW_VERSION=25.3.1
 
 # RecyclerViewAdapter
 BASE_RECYCLER_ADAPTER_VERSION=1.1.1
@@ -76,7 +76,9 @@ BUTTERKNIFE_VERSION = 8.4.0
 BUTTERKNIFE_COMPILER_VERSION = 8.4.0
 # greendao
 GREENDAO_VERSION=3.2.2
-
+# eventBus
+EVENT_BUS_VERSION=3.0.0
+EVENTBUS_ANNOTATION_PROCESSOR_VERSION=3.0.1
 # stetho   chrome\u8F93\u5165chrome://inspect
 STETHO_VERSION=1.4.1
 STETHO_OKHTTP_VERSION=1.4.1
