--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 // 跟下面的versionName保持一致，最后一位用于紧急修复版本
 def versionMajor = 1
-def versionMinor = 0
+def versionMinor = 1
 def versionPatch = 0
-def versionBuild = 0
+def versionHotfix = 0
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
   buildToolsVersion rootProject.ext.buildToolsVersion
@@ -16,8 +16,8 @@ android {
     applicationId "com.ouyangzn.github"
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
-    versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
-    versionName "1.0.0"
+    versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionHotfix
+    versionName "1.1.0"
 
   }
   Properties properties = new Properties()
@@ -48,10 +48,9 @@ android {
       }
     }
     debug {
-      minifyEnabled false
-      shrinkResources false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-      signingConfig signingConfigs.release
       buildConfigField "boolean", "LOG_DEBUG", "true"
       ndk {
         abiFilters "armeabi-v7a"
