--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,21 +45,30 @@ android {
   }
 
   buildTypes {
-    release {
-      minifyEnabled true
-      shrinkResources true
-      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-      signingConfig signingConfigs.release
-      buildConfigField "boolean", "LOG_DEBUG", "false"
-      ndk {
-        abiFilters "armeabi-v7a"
-      }
-    }
     debug {
       minifyEnabled false
       shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       buildConfigField "boolean", "LOG_DEBUG", "true"
+      ndk {
+        abiFilters "armeabi-v7a"
+      }
+    }
+    release {
+      minifyEnabled true
+      shrinkResources true
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+      buildConfigField "boolean", "LOG_DEBUG", "false"
+      ndk {
+        abiFilters "armeabi-v7a"
+      }
+    }
+    release_signed {
+      minifyEnabled true
+      shrinkResources true
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+      signingConfig signingConfigs.release
+      buildConfigField "boolean", "LOG_DEBUG", "false"
       ndk {
         abiFilters "armeabi-v7a"
       }
