--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,15 +54,15 @@ android {
         abiFilters "armeabi-v7a"
       }
     }
-    release {
-      minifyEnabled true
-      shrinkResources true
-      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-      buildConfigField "boolean", "LOG_DEBUG", "false"
-      ndk {
-        abiFilters "armeabi-v7a"
-      }
-    }
+    //    release {
+    //      minifyEnabled true
+    //      shrinkResources true
+    //      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    //      buildConfigField "boolean", "LOG_DEBUG", "false"
+    //      ndk {
+    //        abiFilters "armeabi-v7a"
+    //      }
+    //    }
     release_signed {
       minifyEnabled true
       shrinkResources true
