--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,25 +54,25 @@ android {
         abiFilters "armeabi-v7a"
       }
     }
-    //    release {
-    //      minifyEnabled true
-    //      shrinkResources true
-    //      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-    //      buildConfigField "boolean", "LOG_DEBUG", "false"
-    //      ndk {
-    //        abiFilters "armeabi-v7a"
-    //      }
-    //    }
-    release_signed {
+    release {
       minifyEnabled true
       shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-      signingConfig signingConfigs.release
       buildConfigField "boolean", "LOG_DEBUG", "false"
       ndk {
         abiFilters "armeabi-v7a"
       }
     }
+    //    release_signed {
+    //      minifyEnabled true
+    //      shrinkResources true
+    //      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    //      signingConfig signingConfigs.release
+    //      buildConfigField "boolean", "LOG_DEBUG", "false"
+    //      ndk {
+    //        abiFilters "armeabi-v7a"
+    //      }
+    //    }
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
