--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,12 @@ buildscript {
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     // retrolambda (https://github.com/evant/gradle-retrolambda)
     classpath "me.tatarka:gradle-retrolambda:${GRADLE_RETROLAMBDA_VERSION}"
+    // 使用java8语法报错解决方法(https://github.com/evant/gradle-retrolambda/issues/96)
+    classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     classpath "org.greenrobot:greendao-gradle-plugin:${GREENDAO_VERSION}" // add plugin
   }
+  // Exclude the version that the android plugin depends on.
+  configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
