--- a/.travis.yml
+++ b/.travis.yml
@@ -55,12 +55,14 @@ before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-  - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21" --abi google_apis/armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
 
 before_script:
-  - ./scripts/wait_for_emulator.sh
-  - adb shell input keyevent 82 &
+  - echo n | android create avd --force --name android-24_armeabi-v7a --target android-24 --abi armeabi-v7a --tag default
+  - pushd ${ANDROID_HOME}/tools
+  - emulator @android-24_armeabi-v7a -no-window -gpu off &
+  - popd
+  - android-wait-for-emulator
+  - adb shell wm dismiss-keyguard
 
 notifications:
   email: false
