--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
+#    - sys-img-armeabi-v7a-android-22
   licenses:
     - android-sdk-license-.+
     - '.+'
@@ -56,13 +56,13 @@ before_install:
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
-before_script:
-  - echo n | android create avd --force --name android-22_armeabi-v7a --target android-22 --abi armeabi-v7a --tag default
-  - pushd ${ANDROID_HOME}/tools
-  - emulator @android-22_armeabi-v7a -no-window -gpu off &
-  - popd
-  - android-wait-for-emulator
-  - adb shell wm dismiss-keyguard
+#before_script:
+#  - echo n | android create avd --force --name android-22_armeabi-v7a --target android-22 --abi armeabi-v7a --tag default
+#  - pushd ${ANDROID_HOME}/tools
+#  - emulator @android-22_armeabi-v7a -no-window -gpu off &
+#  - popd
+#  - android-wait-for-emulator
+#  - adb shell wm dismiss-keyguard
 
 notifications:
   email: false
